--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -29,6 +29,10 @@ button.navbar-toggler {
     position: relative;
     top: 60px; 
     box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
+    -webkit-box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
+    -moz-box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
+    -ms-box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
+    -o-box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
     z-index: 100000000000;
 }
 .nav>.nav-item>.nav-link {
@@ -61,18 +65,57 @@ button.navbar-toggler {
 }
 .position-abs h1 {
     text-align: center;
+    text-shadow: 2px 2px 2px rgba(50,50,50,0.5), 2px 2px 2px rgba(100,100,100,0.5);
+    -webkit-text-shadow: 2px 2px 2px rgba(50,50,50,0.5), 2px 2px 2px rgba(100,100,100,0.5);
+    -moz-text-shadow: 2px 2px 2px rgba(50,50,50,0.5), 2px 2px 2px rgba(100,100,100,0.5);
+    -ms-text-shadow: 2px 2px 2px rgba(50,50,50,0.5), 2px 2px 2px rgba(100,100,100,0.5);
+    -o-text-shadow: 2px 2px 2px rgba(50,50,50,0.5), 2px 2px 2px rgba(100,100,100,0.5);
     position: relative;
     bottom: 1em;
 }
 .position-abs div {
     border-radius: 5px;
     background: linear-gradient(120deg, rgba(220,220,220,0.8), rgba(250,250,250,0.7));
+    background: -webkit-linear-gradient(120deg, rgba(220,220,220,0.8), rgba(250,250,250,0.7));
+    background: -moz-linear-gradient(120deg, rgba(220,220,220,0.8), rgba(250,250,250,0.7));
+    background: -o-linear-gradient(120deg, rgba(220,220,220,0.8), rgba(250,250,250,0.7));
     width: 58%;
     margin: 0 auto;
     padding: 25px;
 }
+.position-abs strong {
+    color: dodgerblue
+}
+.contact-hero,
 .services-hero,
 .test-hero,
 .plan-hero-svg {
     height: 500px;
+}
+.credentials-foot a {
+    font-size: 14px;
+}
+.w-40.mx-auto.mt-5 {
+    margin-bottom: 10%;
+}
+input {
+    box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+    -webkit-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+    -moz-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+    -ms-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+    -o-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+}
+.input-group-prepend.u-form__prepend {
+    box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+    -webkit-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+    -moz-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+    -ms-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+    -o-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+}
+textarea {
+    box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+    -webkit-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+    -moz-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+    -ms-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+    -o-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
 }
