Added more heros and changed the type.js for those heros

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -86,6 +86,8 @@ button.navbar-toggler {
 .position-abs strong {
     color: dodgerblue
 }
+.blog-hero,
+.about-hero,
 .contact-hero,
 .services-hero,
 .test-hero,
