--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,5 @@
+
+
 .u-text-animation.u-text-animation--typing.home {
     color: dodgerblue;
     font-weight: 700;
@@ -120,4 +122,65 @@ textarea {
     -moz-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
     -ms-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
     -o-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
+}
+.u-bg-img-hero {
+    box-shadow: 3px 3px 6px rgba(50,50,50,1);
+}
+.footer-logo {
+    width: 10%;
+    height: 10%;
+}
+.services-block {
+    background: linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
+    background: -webkit-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
+    background: -moz-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
+    background: -o-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
+    border-radius: 4.5px;
+    -webkit-border-radius: 4.5px;
+    -moz-border-radius: 4.5px;
+    -ms-border-radius: 4.5px;
+    -o-border-radius: 4.5px;
+}
+.services-block h3 {
+    color: dodgerblue;
+    font-weight: 700;
+    text-shadow: 1.2px 1.2px 3px rgba(200,200,200,0.3);
+    -webkit-text-shadow: 1.2px 1.2px 3px rgba(200,200,200,0.3);
+    -moz-text-shadow: 1.2px 1.2px 3px rgba(200,200,200,0.3);
+    -ms-text-shadow: 1.2px 1.2px 3px rgba(200,200,200,0.3);
+    -o-text-shadow: 1.2px 1.2px 3px rgba(200,200,200,0.3);
+}
+.about-block {
+    background: linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
+    background: -webkit-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
+    background: -moz-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
+    background: -o-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
+    border-radius: 4.5px;
+    -webkit-border-radius: 4.5px;
+    -moz-border-radius: 4.5px;
+    -ms-border-radius: 4.5px;
+    -o-border-radius: 4.5px;
+}
+.about-block h1 {
+    color: dodgerblue;
+    font-weight: 700;
+    text-shadow: 1.2px 1.2px 3px rgba(200,200,200,0.3);
+    text-shadow: 1.2px 1.2px 3px rgba(200,200,200,0.3);
+    -webkit-text-shadow: 1.2px 1.2px 3px rgba(200,200,200,0.3);
+    -moz-text-shadow: 1.2px 1.2px 3px rgba(200,200,200,0.3);
+    -ms-text-shadow: 1.2px 1.2px 3px rgba(200,200,200,0.3);
+    -o-text-shadow: 1.2px 1.2px 3px rgba(200,200,200,0.3);
+}
+
+/* Modal Styles */
+.modal .modal-body form input {
+    width: 70%;
+    margin: 0 auto
+}
+.modal .modal-body form textarea {
+    width: 70%;
+    margin: 0 auto
+}
+.modal .modal-body {
+    background: url('../theme/assets/svg/flat-icons/subscribe-flat-concept-illustration.svg') 50% 0 repeat fixed;
 }
