--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -88,6 +88,7 @@ button.navbar-toggler {
 .position-abs strong {
     color: dodgerblue
 }
+.home-hero,
 .blog-hero,
 .about-hero,
 .contact-hero,
@@ -151,10 +152,10 @@ textarea {
     -o-text-shadow: 1.2px 1.2px 3px rgba(200,200,200,0.3);
 }
 .about-block {
-    background: linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
+    /* background: linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
     background: -webkit-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
     background: -moz-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
-    background: -o-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
+    background: -o-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7)); */
     border-radius: 4.5px;
     -webkit-border-radius: 4.5px;
     -moz-border-radius: 4.5px;
@@ -183,4 +184,22 @@ textarea {
 }
 .modal .modal-body {
     background: url('../theme/assets/svg/flat-icons/subscribe-flat-concept-illustration.svg') 50% 0 repeat fixed;
+}
+
+.pr-lg-4.mb-7 > ul {
+    list-style-type: none;
+    text-align: center;
+}
+.pr-lg-4.mb-7 > ul li {
+    text-align: center;
+}
+p .far {
+    font-size: 30px;
+    color: dodgerblue;
+    text-shadow: 2px 2px 3px #f8f8f8;
+}
+.item-row div.col-md-4 {
+    background: linear-gradient(10deg, rgba(200,200,200,0.5), rgba(150,150,150,0.5));
+    padding-top: 10px;
+    margin: -2px;
 }
