--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -131,17 +131,7 @@ textarea {
     width: 10%;
     height: 10%;
 }
-.services-block {
-    background: linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
-    background: -webkit-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
-    background: -moz-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
-    background: -o-linear-gradient(120deg, rgba(150,150,150,0.1), rgba(250,250,250,0.7));
-    border-radius: 4.5px;
-    -webkit-border-radius: 4.5px;
-    -moz-border-radius: 4.5px;
-    -ms-border-radius: 4.5px;
-    -o-border-radius: 4.5px;
-}
+
 .services-block h3 {
     color: dodgerblue;
     font-weight: 700;
@@ -198,8 +188,34 @@ p .far {
     color: dodgerblue;
     text-shadow: 2px 2px 3px #f8f8f8;
 }
-.item-row div.col-md-4 {
-    background: linear-gradient(10deg, rgba(200,200,200,0.5), rgba(150,150,150,0.5));
-    padding-top: 10px;
-    margin: -2px;
+
+.row.item-row.top {
+    margin-top: 60px;
+}
+.row.item-row.bottom {
+    margin-bottom: 60px;
+}
+.row.item-row {
+    padding: 5px;
+}
+ul.mt-1.text-center {
+    list-style-type: none;
+}
+.services-block ul {
+    list-style-type: none;
+}
+.services-block ul li {
+    text-align: center;
+}
+.subscribe {
+    background: linear-gradient(120deg, rgba(100,100,100,0.5), rgba(180,180,180,0.5));
+    background: -webkit-linear-gradient(120deg, rgba(100,100,100,0.5), rgba(180,180,180,0.5));
+    background: -moz-linear-gradient(120deg, rgba(100,100,100,0.5), rgba(180,180,180,0.5));
+    background: -o-linear-gradient(120deg, rgba(100,100,100,0.5), rgba(180,180,180,0.5));
+    box-shadow: 2px 2px 5px rgba(50,50,50,0.5);
+    -webkit-box-shadow: 2px 2px 5px rgba(50,50,50,0.5);
+    -moz-box-shadow: 2px 2px 5px rgba(50,50,50,0.5);
+    -ms-box-shadow: 2px 2px 5px rgba(50,50,50,0.5);
+    -o-box-shadow: 2px 2px 5px rgba(50,50,50,0.5);
+    color: white;
 }
