--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,7 +18,7 @@ button.navbar-toggler {
     background: -moz-linear-gradient(120deg, #2A2A95, rgba(100,100,250,0.5));
     background: -o-linear-gradient(120deg, #2A2A95, rgba(100,100,250,0.5));
 }
-.nav {
+.nav-styles {
     background: rgba(0, 0, 0, 0.65);
     width: 300px;
     display: block;
@@ -35,7 +35,7 @@ button.navbar-toggler {
     -moz-box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
     -ms-box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
     -o-box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
-    z-index: 100000000000;
+    z-index: 10000000000000000000;
 }
 .nav>.nav-item>.nav-link {
     color: white;
@@ -44,6 +44,7 @@ button.navbar-toggler {
 .fa.fa-bars {
     color: white;
 }
+
 .u-pricing-v1 {
     box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
     -webkit-box-shadow: 3px 3px 6px rgba(50,50,50,0.5);
@@ -218,4 +219,23 @@ ul.mt-1.text-center {
     -ms-box-shadow: 2px 2px 5px rgba(50,50,50,0.5);
     -o-box-shadow: 2px 2px 5px rgba(50,50,50,0.5);
     color: white;
+}
+.card-img-top {
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.test-tab-container {
+    padding-top: 5%;
+    padding-bottom: 10%;
+    margin-top: 1%;
+    background: linear-gradient(120deg, rgba(200,200,200,0.5), rgba(250,250,250,0.5));
+    background: -webkit-linear-gradient(120deg, rgba(200,200,200,0.5), rgba(250,250,250,0.5));
+    background: -moz-linear-gradient(120deg, rgba(200,200,200,0.5), rgba(250,250,250,0.5));
+    background: -o-linear-gradient(120deg, rgba(200,200,200,0.5), rgba(250,250,250,0.5));
+}
+.card {
+    background: transparent;
 }
