--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -221,6 +221,9 @@ ul.mt-1.text-center {
     color: white;
 }
 .card-img-top {
+    width: 50%;
+    height: 50%;
+    margin: 0 auto;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -238,4 +241,56 @@ ul.mt-1.text-center {
 }
 .card {
     background: transparent;
+}
+.list-unstyled.u-list.u-list--white.bg-primary {
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+.tab-section {
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    padding: 10px;
+}
+
+#GMapPolylines {
+    width: 300px;
+    height: 100%;
+}
+.far.fa-star {
+    color: gold;
+    font-size: 20px;
+}
+.item-row .col-md-3 {
+    background: linear-gradient(90deg, dodgerblue, rgba(150,150,180,0.5));
+    background: -webkit-linear-gradient(90deg, dodgerblue, rgba(150,150,180,0.5));
+    background: -moz-linear-gradient(90deg, dodgerblue, rgba(150,150,180,0.5));
+    background: -o-linear-gradient(90deg, dodgerblue, rgba(150,150,180,0.5));
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    box-shadow: 3px 3px 5px rgba(50,50,50,0.5);
+    -webkit-box-shadow: 3px 3px 5px rgba(50,50,50,0.5);
+    -moz-box-shadow: 3px 3px 5px rgba(50,50,50,0.5);
+    -ms-box-shadow: 3px 3px 5px rgba(50,50,50,0.5);
+    -o-box-shadow: 3px 3px 5px rgba(50,50,50,0.5);
+    width: 80%;
+    position: relative;
+    left: 5%;
+    padding: 10px;
+}
+.item-row .col-md-3 p {
+    font-size: 80%;
+    font-weight: 700;
+    color: whitesmoke;
+}
+.u-divider {
+    color: dodgerblue;
 }
