Added more pages to the site changed the layout

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -14,10 +14,10 @@ button.navbar-toggler {
 }
 .navbar {
     overflow-y: auto;
-    background: linear-gradient(120deg, rgba(10,10,10,0.7), rgba(50,50,50,0.7));
-    background: -webkit-linear-gradient(120deg, rgba(10,10,10,0.7), rgba(50,50,50,0.7));
-    background: -moz-linear-gradient(120deg, rgba(10,10,10,0.7), rgba(50,50,50,0.7));
-    background: -o-linear-gradient(120deg, rgba(10,10,10,0.7), rgba(50,50,50,0.7));
+    background: linear-gradient(120deg, rgba(0,0,250,0.8), rgba(50,50,200,0.8));
+    background: -webkit-linear-gradient(120deg, rgba(0,0,250,0.8), rgba(50,50,200,0.8));
+    background: -moz-linear-gradient(120deg, rgba(0,0,250,0.8), rgba(50,50,200,0.8));
+    background: -o-linear-gradient(120deg, rgba(0,0,250,0.8), rgba(50,50,200,0.8));
 }
 .nav-styles {
     background: rgba(0, 0, 0, 0.65);
@@ -31,11 +31,6 @@ button.navbar-toggler {
     border-radius: 4px;
     position: relative;
     top: 60px; 
-    box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
-    -webkit-box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
-    -moz-box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
-    -ms-box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
-    -o-box-shadow: 2.5px 2.5px 7px rgba(50,50,50,0.5);
     z-index: 10000000000000000000;
 }
 .nav>.nav-item>.nav-link {
@@ -75,6 +70,7 @@ h1 span {
     -ms-text-shadow: 2px 2px 5px rgba(100,100, 250, 0.5);
     -o-text-shadow: 2px 2px 5px rgba(100,100, 250, 0.5);
 }
+h1.display-5.font-size-48--md-down.font-weight-bold ,
 h1.text-primary.display-5.font-size-48--md-down.font-weight-bold {
     text-shadow: 2px 2px 5px rgba(100,100, 250, 0.5);
     -webkit-text-shadow: 2px 2px 5px rgba(100,100, 250, 0.5);
@@ -93,6 +89,7 @@ h1.text-primary.display-5.font-size-48--md-down.font-weight-bold {
 }
 .position-abs h1 {
     text-align: center;
+    color: white;
     text-shadow: 2px 2px 2px rgba(50,50,50,0.5), 2px 2px 2px rgba(100,100,100,0.5);
     -webkit-text-shadow: 2px 2px 2px rgba(50,50,50,0.5), 2px 2px 2px rgba(100,100,100,0.5);
     -moz-text-shadow: 2px 2px 2px rgba(50,50,50,0.5), 2px 2px 2px rgba(100,100,100,0.5);
@@ -131,17 +128,73 @@ h1.text-primary.display-5.font-size-48--md-down.font-weight-bold {
     min-height: 640px;
 }
 .footer-container {
-    background: url('../img/boards.jpeg') 50% 0 repeat fixed;
-    background-size: auto;
-    min-height: 400px;
+    background: url('../img/cool-black-grey.jpeg') 50% 0 repeat fixed;
+    background-size: cover;
+    min-height: 200px;
+    background-color: rgba(100,100,250,0.5);
+    background-blend-mode: multiply;
 }
 .home-block-container {
-    background: url('../img/snow.jpeg') 50% repeat fixed;
+    background: url('../img/woman-3.jpeg') 0% 0 repeat fixed;
     background-size: cover;
-    min-height: 400px;
+    min-height: 500px;
 }
 .services-container {
     background: url('../img/credit-problem.jpeg') 50% 0 repeat fixed;
+    background-size: cover;
+    min-height: 640px;
+}
+.services-container-2 {
+    background: url('../img/ipad.jpeg') 50% 0 repeat fixed;
+    background-size: cover;
+    min-height: 500px;
+}
+.services-container-3,
+.services-container-1 {
+    min-height: 400px;
+}
+.about-block-container-2 {
+    background: url('../img/credit-fix.jpeg') 50% 0 repeat fixed;
+    background-size: cover;
+    min-height: 500px;
+}
+.about-container {
+    background: url('../img/credit-score.jpeg') 50% 0 repeat fixed;
+    background-size: cover;
+    min-height: 640px;
+}
+.services-container-3 .row {
+    position: relative;
+    left: 5%;
+}
+.services-container-3 h3 {
+    position: relative;
+    right: 5%;
+}
+.services-container-1 ul {
+    list-style-type: none;
+}
+.services-container-1 ul li {
+    text-align: center;
+}
+.privacy-container {
+    background: url('../img/fix-credit.jpg') 50% 0 repeat fixed;
+    background-size: cover;
+    min-height: 640px;
+}
+.privacy-container-1 {
+    min-height: 400px;
+    overflow: scroll;
+}
+.privacy-container-1 .nav-pills .nav-item .nav-link {
+    color: dodgerblue;
+    font-size: 14px;
+}
+.privacy-container-1 .nav-pills .nav-item .nav-link.active{
+    color: white;
+}
+.faq-container {
+    background: url('../img/credit-101.jpg') 50% 0 repeat fixed;
     background-size: cover;
     min-height: 640px;
 }
@@ -443,3 +496,52 @@ div.col-md-6.map-info span {
 div.col-md-6.map-info span i {
     color: dodgerblue;
 }
+.top-row-text h3 {
+    color: rgb(100,100,250);
+}
+.learn-more-btn a {
+    color: white;
+}
+.learn-more-btn a:hover {
+    color: white;
+}
+.learn-more-btn {
+    background: rgba(100,100,250,1);
+    color: white;
+    border-radius: 20px;
+    height: 30px;
+    position: relative;
+    bottom: 20px;
+    left: 10%;
+}
+.learn-more-btn span {
+    position: relative;
+    bottom: 10px;
+}
+.learn-more-btn i {
+    position: relative;
+    bottom: 10px;
+    left: 10px;
+}
+.row-of-3 div div {
+    background: rgba(150,150,150,0.1);
+    border-radius: 10px;
+    padding: 10px;
+}
+.row-of-3 > div > div > h4 {
+    color: rgb(0,0,250);
+}
+.row-of-3.second div p i {
+    font-size: 150%;
+    color: rgb(100,100,250);
+}
+.footer-style {
+    background: linear-gradient(120deg, rgba(0,0,250,1), rgba(50,50,200,1));
+    background: -moz-linear-gradient(120deg, rgba(0,0,250,1), rgba(50,50,200,1));
+    background: -webkit-linear-gradient(120deg, rgba(0,0,250,1), rgba(50,50,200,1));
+    background: -o-linear-gradient(120deg, rgba(0,0,250,1), rgba(50,50,200,1));
+}
+/* .footer-style .nav {
+    position: relative;
+    left: 30%;
+} */
